--- a/file-management.html
+++ b/file-management.html
@@ -53,37 +53,37 @@
                             </ul>
                         </li>
                         <li>
-                            <button class="category-toggle" data-category="school-fees-receipt">School Fees Receipt</button>
+                            <button class="category-toggle" data-category="school-fees-receipt">School Fees Receipt   <i class="fa-solid fa-arrow-down"></i></button>
                             <ul class="file-list-dropdown" id="school-fees-receipt-files" style="display: none;">
                                 <!-- Files under School Fees Receipt will be dynamically added here -->
                             </ul>
                         </li>
                         <li>
-                            <button class="category-toggle" data-category="waec-result">WAEC Result</button>
+                            <button class="category-toggle" data-category="waec-result">WAEC Result   <i class="fa-solid fa-arrow-down"></i></button>
                             <ul class="file-list-dropdown" id="waec-result-files" style="display: none;">
                                 <!-- Files under WAEC Result will be dynamically added here -->
                             </ul>
                         </li>
                         <li>
-                            <button class="category-toggle" data-category="jamb-result">JAMB Result</button>
+                            <button class="category-toggle" data-category="jamb-result">JAMB Result   <i class="fa-solid fa-arrow-down"></i></button>
                             <ul class="file-list-dropdown" id="jamb-result-files" style="display: none;">
                                 <!-- Files under JAMB Result will be dynamically added here -->
                             </ul>
                         </li>
                         <li>
-                            <button class="category-toggle" data-category="jamb-admission-letter">JAMB Admission Letter</button>
+                            <button class="category-toggle" data-category="jamb-admission-letter">JAMB Admission Letter   <i class="fa-solid fa-arrow-down"></i></button>
                             <ul class="file-list-dropdown" id="jamb-admission-letter-files" style="display: none;">
                                 <!-- Files under JAMB Admission Letter will be dynamically added here -->
                             </ul>
                         </li>
                         <li>
-                            <button class="category-toggle" data-category="birth-certificate">Birth Certificate</button>
+                            <button class="category-toggle" data-category="birth-certificate">Birth Certificate   <i class="fa-solid fa-arrow-down"></i></button>
                             <ul class="file-list-dropdown" id="birth-certificate-files" style="display: none;">
                                 <!-- Files under Birth Certificate will be dynamically added here -->
                             </ul>
                         </li>
                         <li>
-                            <button class="category-toggle" data-category="state-of-origin">State of Origin Certificate</button>
+                            <button class="category-toggle" data-category="state-of-origin">State of Origin Certificate   <i class="fa-solid fa-arrow-down"></i></button>
                             <ul class="file-list-dropdown" id="state-of-origin-files" style="display: none;">
                                 <!-- Files under State of Origin Certificate will be dynamically added here -->
                             </ul>
